Fixed layout bug, reduced size of gauge label + improved description.

--- a/samples/dashboards/demo/live-weather/demo.css
+++ b/samples/dashboards/demo/live-weather/demo.css
@@ -199,7 +199,7 @@
 }
 
 #kpi-layout .highcharts-dashboards-component-kpi-chart-container .highcharts-label {
-    font-size: 32px;
+    font-size: 28px;
 }
 
 #kpi-layout .highcharts-dashboards-component-kpi-chart-container .highcharts-pane {
